--- a/projects/diurn-ai-raw.ipynb
+++ b/projects/diurn-ai-raw.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diurn.ai : The instagram page that summarizes the news"
+    "# Diurn.ai : The instagram page that summarizes the news\n",
+    "\n",
+    "   "
    ]
   },
   {
