--- a/projects/diurn-ai-raw.ipynb
+++ b/projects/diurn-ai-raw.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"files/images/ig-showcase.png\">"
+    "<img src=\"files/images/ig-showcase.PNG\">"
    ]
   },
   {
